# projet_api_et_deploiement

./: README.md  test_query_helpers.py
api/: Dockerfile  Dockerignore  README.md  database.py  requirements.txt
sdk/: README.md  pyproject.toml  test_sdk.py
sdk/src/sylla_films/: __init__.py  film_client.py  film_config.py
